--- a/FEfiles/views/add_data.html
+++ b/FEfiles/views/add_data.html
@@ -3,13 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>新增数据</title>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- <form method="get"> -->
     <table class="table table-striped">
         <thead>
             <tr>
@@ -20,30 +18,30 @@
         </thead>
         <tbody>
             <tr>
-                <td>前端全栈工程师精英班</td>
+                <td>数学课程</td>
                 <td>
-                    <input type="text" name="allfeNum" id="number-one">
+                    <input type="text" name="mathNum" id="number-one">
                 </td>
                 <td>
-                    <input type="text" name="allfeAdd" id="add-one">
-                </td>
-            </tr>
-            <tr>
-                <td>精英前端工程师预读班</td>
-                <td>
-                    <input type="text" name="readyNum" id="number-two">
-                </td>
-                <td>
-                    <input type="text" name="readyAdd" id="add-two">
+                    <input type="text" name="mathAdd" id="add-one">
                 </td>
             </tr>
             <tr>
-                <td>0基础轻松学</td>
+                <td>英语课程</td>
                 <td>
-                    <input type="text" name="zeroNum" id="number-three">
+                    <input type="text" name="engNum" id="number-two">
                 </td>
                 <td>
-                    <input type="text" name="zeroAdd" id="add-three">
+                    <input type="text" name="engAdd" id="add-two">
+                </td>
+            </tr>
+            <tr>
+                <td>文言文课程</td>
+                <td>
+                    <input type="text" name="ccNum" id="number-three">
+                </td>
+                <td>
+                    <input type="text" name="ccAdd" id="add-three">
                 </td>
             </tr>
             <tr>
@@ -59,38 +57,34 @@
     <button class="btn btn-success" id="submit-button">点击添加</button>
     <script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script>
-    // 给按钮添加点击事件，通过ajax发送数据
-    $('#submit-button').click(function(e) {
-        // 阻止按钮默认事件
-        e.preventDefault();
-        $.ajax({
-            url: 'http://localhost:3000/index/add',
-            type: "get",
-            dataType: "json",
-            data: {
-                "allfeNum": $('#number-one').val(),
-                "allfeAdd": $('#add-one').val(),
-                "readyNum": $('#number-two').val(),
-                "readyAdd": $('#add-two').val(),
-                "zeroNum": $('#number-three').val(),
-                "zeroAdd": $('#add-three').val(),
-                "freeNum": $('#number-four').val(),
-                "freeAdd": $('#add-four').val(),
-            },
-            success: function(result) {
-                // console.log('we get the data');
-                //定义传输成功后打开的界面（展示界面）
-                window.open('http://localhost:3000/views/index')
-            },
-            //出现错误信息时候，便于排查
-            error: function(XMLHttpRequest, textStatus, errorThrown) {
-                alert(XMLHttpRequest.status);
-                alert(XMLHttpRequest.readyState);
-                alert(textStatus);
-            },
+    <script type="text/javascript">
+        $('#submit-button').on('click',function(e){
+            e.preventDefault();
+            $.ajax({
+                url:'http://localhost:3000/addData',
+                type:'get',
+                dataType:'json',
+                data:{
+                    'mathNum':$('#number-one').val(),
+                    'mathAdd':$('#add-one').val(),
+                    'engNum':$('#number-two').val(),
+                    'engAdd':$('#add-two').val(),
+                    'ccNum':$('#number-three').val(),
+                    'ccAdd':$('#add-three').val(),
+                    'freeNum':$('#number-four').val(),
+                    'freeAdd':$('#add-four').val(),
+                },
+                success:function(result){
+                    // window.open('http://localhost:3000/addData');
+                    console.log('success');
+                },
+                error:function(XHR,textStatus,errorThrown){
+                    console.log(XHR.status);
+                    console.log(XHR.readyState);
+                    console.log(textStatus);
+                }
+            });
         })
-    })
     </script>
 </body>
 
