一些小的更改

--- a/FEfiles/views/aclass.html
+++ b/FEfiles/views/aclass.html
@@ -92,25 +92,25 @@
                         <div class="arrow_border"></div>
                     </div>
                     <i class="icon-signal"></i>
-                    <span>课程a</span>
+                    <span>课程A</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/bClassData">
                     <i class="icon-signal"></i>
-                    <span>课程b</span>
+                    <span>课程B</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/cClassData">
                     <i class="icon-signal"></i>
-                    <span>课程c</span>
+                    <span>课程C</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/dClassData">
                     <i class="icon-signal"></i>
-                    <span>课程d</span>
+                    <span>课程D</span>
                 </a>
             </li>
 
@@ -151,7 +151,7 @@
                     <h4 class="title">A-课程数据展示</h4>
                 </div>
                 <div class="col-md-12">
-                    <h5>课程参与人数变动信息</h5>
+                    <h5>A-课程参与人数变动情况</h5>
                     <br>
                     <div id="firstclass"></div>
                 </div>
