--- a/FEfiles/views/cclass.html
+++ b/FEfiles/views/cclass.html
@@ -89,13 +89,13 @@
                 <a href="http://localhost:3000/aClassData">
 
                     <i class="icon-signal"></i>
-                    <span>课程a</span>
+                    <span>课程A</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/bClassData">
                     <i class="icon-signal"></i>
-                    <span>课程b</span>
+                    <span>课程B</span>
                 </a>
             </li>
             <li class="active">
@@ -105,13 +105,13 @@
                         <div class="arrow_border"></div>
                     </div>
                     <i class="icon-signal"></i>
-                    <span>课程c</span>
+                    <span>课程C</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/dClassData">
                     <i class="icon-signal"></i>
-                    <span>课程d</span>
+                    <span>课程D</span>
                 </a>
             </li>
 
@@ -151,7 +151,7 @@
                     <h4 class="title">C-课程数据展示</h4>
                 </div>
                 <div class="col-md-12">
-                    <h5>c-课程参与人数变动情况</h5>
+                    <h5>C-课程参与人数变动情况</h5>
                     <br>
                     <div id="thirdclass"></div>
                 </div>
