--- a/FEfiles/views/bclass.html
+++ b/FEfiles/views/bclass.html
@@ -89,7 +89,7 @@
                 <a href="http://localhost:3000/aClassData">
 
                     <i class="icon-signal"></i>
-                    <span>课程a</span>
+                    <span>课程A</span>
                 </a>
             </li>
             <li  class="active">
@@ -99,19 +99,19 @@
                         <div class="arrow_border"></div>
                     </div>
                     <i class="icon-signal"></i>
-                    <span>课程b</span>
+                    <span>课程B</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/cClassData">
                     <i class="icon-signal"></i>
-                    <span>课程c</span>
+                    <span>课程C</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/dClassData">
                     <i class="icon-signal"></i>
-                    <span>课程d</span>
+                    <span>课程D</span>
                 </a>
             </li>
 
