--- a/FEfiles/views/dclass.html
+++ b/FEfiles/views/dclass.html
@@ -89,19 +89,19 @@
                 <a href="http://localhost:3000/aClassData">
 
                     <i class="icon-signal"></i>
-                    <span>课程a</span>
+                    <span>课程A</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/bClassData">
                     <i class="icon-signal"></i>
-                    <span>课程b</span>
+                    <span>课程B</span>
                 </a>
             </li>
             <li>
                 <a href="http://localhost:3000/cClassData">
                     <i class="icon-signal"></i>
-                    <span>课程c</span>
+                    <span>课程D</span>
                 </a>
             </li>
             <li  class="active">
@@ -111,7 +111,7 @@
                         <div class="arrow_border"></div>
                     </div>
                     <i class="icon-signal"></i>
-                    <span>课程d</span>
+                    <span>课程D</span>
                 </a>
             </li>
 
@@ -151,7 +151,7 @@
                     <h4 class="title">D-课程数据展示</h4>
                 </div>
                 <div class="col-md-12">
-                    <h5>d-课程参与人数变动情况</h5>
+                    <h5>D-课程参与人数变动情况</h5>
                     <br>
                     <div id="fourthclass"></div>
                 </div>
