--- a/FEfiles/views/signin.html
+++ b/FEfiles/views/signin.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html class="login-bg">
 <head>
-	<title>后台登录页面</title>
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+    <title>后台登录页面</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- bootstrap -->
     <link href="https://cdn.bootcss.com/bootstrap/3.0.0/css/bootstrap.css" rel="stylesheet">
@@ -70,14 +70,17 @@
         <div class="box">
             <div class="content-wrap">
                 <h6>登录</h6>
-                <input class="form-control" type="text" placeholder="邮箱地址">
-                <input class="form-control" type="password" placeholder="密码">
+                 <form method="post" action="http://localhost/database/login.php">
+                <input id="username" name="uname" class="form-control" type="text" placeholder="用户名">
+                <input id="userpassword" name="upwd" class="form-control" type="password" placeholder="密码">
                 <a href="#" class="forgot">忘记密码?</a>
                 <div class="remember">
                     <input id="remember-me" type="checkbox">
                     <label for="remember-me">记住密码</label>
                 </div>
-                <a class="btn-glow primary login" href="http://localhost:3000/showing">登录</a>
+                <!-- <a class="btn-glow primary login" href="http://localhost:3000/showing">登录</a> -->
+                <input class="btn-glow primary login" type="submit" name="usersubmit" value="登录">
+                </form>
             </div>
         </div>
 
@@ -87,7 +90,7 @@
         </div>
     </div>
 
-	<!-- scripts -->
+    <!-- scripts -->
     <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
     <script src="scripts/theme.js"></script>
@@ -105,7 +108,6 @@
 
                 $("html").css("background-image", "url('img/bgs/" + bg + "')");
             });
-
         });
     </script>
 </body>
